@@ -1,0 +1,143 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<refentry xmlns='http://docbook.org/ns/docbook' version='5.0' xml:lang='en' xml:id='gstl1'>
+  <refmeta>
+    <refentrytitle>G-PLY
+    </refentrytitle>
+    <manvolnum>1</manvolnum>
+    <refmiscinfo class='source'>BRL-CAD</refmiscinfo>
+    <refmiscinfo class='software'>BRL-CAD</refmiscinfo>
+    <refmiscinfo class='manual'>User Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv>
+    <refname>g-ply</refname>
+    <refpurpose> Stanford PLY exporter (BRL-CAD to PLY)</refpurpose>
+  </refnamediv>
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id='synopsis'>
+    <cmdsynopsis>
+      <command>g-ply</command>
+      <arg choice='opt'>-v</arg>
+      <arg choice='opt'>-xX <replaceable>lvl</replaceable></arg>
+      <arg choice='opt'>-a <replaceable>abs_tess_tol</replaceable></arg>
+      <arg choice='opt'>-r <replaceable>rel_tess_tol</replaceable></arg>
+      <arg choice='opt'>-n <replaceable>norm_tess_tol</replaceable></arg>
+      <arg choice='opt'>-t <replaceable>type</replaceable></arg>
+      <arg choice='opt'>-s</arg>
+      <arg choice='opt'>-D <replaceable>dist_calc_tol</replaceable></arg>
+      <arg choice='plain'>-o <replaceable>output_file_name</replaceable></arg>
+      <arg choice='plain'><replaceable>database.g</replaceable></arg>
+      <arg choice='plain' rep='repeat'><replaceable>object(s)</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+
+  <refsect1 xml:id='description'><title>DESCRIPTION</title>
+  <para>
+    <command>g-ply</command> converts the specified<emphasis remap='I'>object(s)</emphasis>
+    from a BRL-CAD <emphasis remap='I'>database.g</emphasis> file to the
+    <emphasis remap='I'>Stanfort PLY</emphasis> file format.
+  </para>
+
+  <para>The following options are recognized.</para>
+  <variablelist remap='TP'>
+    
+    <varlistentry>
+      <term><option>-o filename</option></term>
+      <listitem><para>Specify output file name.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-s</option></term>
+      <listitem>
+	<para>
+	  Write out one object per file, instead of merging individual objects into a single ply file.
+	</para>
+      </listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-t</option> type (asc: ascii), (le: little endian), (be: big endian)</term>
+      <listitem>
+	<para>
+	  Specify the type of PLY file to write.
+	</para>
+      </listitem>
+    </varlistentry>
+    
+    
+    <varlistentry>
+      <term><option>-D#</option></term>
+      <listitem>
+	<para>Specify a calculational distance tolerance (mm). Any two vertices that are
+	less than this distance apart will be treated as the same vertex.</para>
+      </listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-a#</option></term>
+      <listitem><para>Specify the absolute tesselation tolerance.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-r#</option></term>
+      <listitem><para>Specify the relative tesselation tolerance.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-n#</option></term>
+      <listitem><para>Specify the surface-normal tesselation tolerance.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-x#</option></term>
+      <listitem><para>Specify an RT debug flag.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-X#</option></term>
+      <listitem><para>Specify an NMG debug flag.</para></listitem>
+    </varlistentry>
+    
+    <varlistentry>
+      <term><option>-v</option></term>
+      <listitem><para>Enable verbose output.</para></listitem>
+    </varlistentry>
+    
+  </variablelist>
+  </refsect1>
+
+  <refsect1 xml:id='example'>
+    <title>EXAMPLE</title>
+    <synopsis>
+      $ g-ply -o <emphasis remap='I'>sample.ply sample.g sample_object</emphasis>
+    </synopsis>
+  </refsect1>
+
+  <refsect1 xml:id='diagnostics'>
+    <title>DIAGNOSTICS</title>
+    <para>Error messages are intended to be self-explanatory.</para>
+  </refsect1>
+
+  <refsect1 xml:id='author'>
+    <title>AUTHOR</title>
+    <para>BRL-CAD Team</para>
+  </refsect1>
+
+  <refsect1 xml:id='copyright'>
+    <title>COPYRIGHT</title>
+    <para>
+      This software is Copyright (c) 2003-2016 by the United States
+      Government as represented by U.S. Army Research Laboratory.
+    </para>
+  </refsect1>
+
+  <refsect1 xml:id='bug_reports'>
+    <title>BUG REPORTS</title>
+    <para>
+      Reports of bugs or problems should be submitted via electronic
+      mail to &lt;devs@brlcad.org&gt;.
+    </para>
+  </refsect1>
+</refentry>
+
